hh/vDSP.h

    /*  Define types:

            vDSP_Length for numbers of elements in arrays and for indices of
            elements in arrays.  (It is also used for the base-two logarithm of
            numbers of elements, although a much smaller type is suitable for
            that.)

            vDSP_Stride for differences of indices of elements (which of course
            includes strides).
    */
    typedef unsigned long vDSP_Length;
/*  Maps:

        No strides are used; arrays map directly to memory.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] += |A[n]| ** 2;
*/

// Create Blackman window.
extern void vDSP_blkman_window(float *__C, vDSP_Length __N, int __Flag)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_blkman_windowD(double *__C, vDSP_Length __N, int __Flag)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 2; n < N+2; ++n)   // Note outputs start with C[2].
            C[n] =
                + A[n-0]*B[0]
                + A[n-1]*B[1]
                + A[n-2]*B[2]
                - C[n-1]*B[3]
                - C[n-2]*B[4];
*/

// Create Hamming window.
extern void vDSP_hamm_window(float *__C, vDSP_Length __N, int __Flag)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_hamm_windowD(double *__C, vDSP_Length __N, int __Flag)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:

        No strides are used; the array maps directly to memory.

    These compute:

        If Flag & vDSP_HALF_WINDOW:
            Length = (N+1)/2;
        Else
            Length = N;

        for (n = 0; n < Length; ++n)
            C[n] = .54 - .46 * cos(2*pi*n/N);
*/

// Create Hanning window.
extern void vDSP_hann_window(float *__C, vDSP_Length __N, int __Flag)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_hann_windowD(double *__C, vDSP_Length __N, int __Flag)
    API_AVAILABLE(macos(10.4), ios(4.0));